--- a/TrainingDemos/TemperatureChart.html
+++ b/TrainingDemos/TemperatureChart.html
@@ -8,8 +8,13 @@
 	<script src="Temperature.js"></script>
 	<style>
 		#tblChart{
-			border:solid 5px #ccc;
+			border-collapse:collapse;
 			width:400px;
+		}
+		
+		#tblChart td, #tblChart caption{
+			border:1px solid black;
+			margin:0px;
 		}
 	</style>
 </head>
